[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/game-over-bg.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/AmaticSC-Bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/gui/button-play-again.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/button-exit.png" type="Texture" id=5]

[node name="GameOver" type="MarginContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 384.0
script = ExtResource( 1 )

[node name="cnt" type="NinePatchRect" parent="."]
margin_right = 256.0
margin_bottom = 384.0
rect_min_size = Vector2( 256, 384 )
texture = ExtResource( 2 )

[node name="mg" type="MarginContainer" parent="cnt"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -301.0

[node name="Info" type="VBoxContainer" parent="cnt/mg"]
margin_right = 224.0
margin_bottom = 301.0

[node name="Score" type="Label" parent="cnt/mg/Info"]
margin_right = 224.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Your score: 0"
align = 1
valign = 1

[node name="Killed" type="Label" parent="cnt/mg/Info"]
margin_top = 35.0
margin_right = 224.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0313726, 0.403922, 0, 1 )
text = "Goblins killed: 0"
align = 1
valign = 1

[node name="HighScore" type="Label" parent="cnt/mg/Info"]
margin_top = 70.0
margin_right = 224.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.898039, 1, 0, 1 )
text = "High Score : 0"
align = 1
valign = 1

[node name="PlayAgain" type="TextureButton" parent="cnt/mg/Info"]
margin_top = 105.0
margin_right = 224.0
margin_bottom = 201.0
rect_min_size = Vector2( 192, 96 )
texture_normal = ExtResource( 4 )

[node name="Quit" type="TextureButton" parent="cnt/mg/Info"]
margin_top = 205.0
margin_right = 224.0
margin_bottom = 301.0
rect_min_size = Vector2( 192, 96 )
texture_normal = ExtResource( 5 )

[connection signal="pressed" from="cnt/mg/Info/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="cnt/mg/Info/Quit" to="." method="_on_Quit_pressed"]
